# iliad

./: .gitignore  .gitmodules  README.md
base_simulation/: CMakeLists.txt  package.xml
base_simulation/launch/: iliad_sim.launch  iliad_sim_ncfm_humans.launch  iliad_sim_ncfm_long_walk.launch  iliad_sim_ncfm_no_human.launch  iliad_sim_ncfm_short_walk.launch  scenario_setup.launch
base_simulation/params/: nav_laser_filter.yaml  nav_laser_filter_real.yaml  safety_laser_filter.yaml
base_simulation/rviz/: iliad_cititruck.rviz
base_simulation/urdf/: iliad_uol_cititruck.xacro  kinect2b.xacro
base_simulation/worlds/: ncfm_model_1_actor_long.world  ncfm_model_1_actor_scenario-1.world  ncfm_model_1_actor_scenario-2.world  ncfm_model_1_actor_scenario-3.world  ncfm_model_1_actor_scenario-4.world  ncfm_model_1_actor_short.world  ncfm_model_1_new_actor_short.world
constrain_maps/: CMakeLists.txt  package.xml
constrain_maps/bags/: 2019-04-26-10-06-43.bag  2019-04-29-18-16-52.bag
constrain_maps/config/: custom_rosconsole.conf  visualization.yaml
constrain_maps/launch/: grid.launch  grid_debug.launch
constrain_maps/rviz/: gridmap_test.rviz
constrain_maps/scripts/: fakeTraj.py
constrain_maps/src/: constrain_plotter.cpp  constrain_plotter_node.cpp
demo/: CMakeLists.txt  package.xml
demo/bags/: foward_80cm.bag
demo/launch/: bag_map_recording.launch  iliad_lcas.launch  iliad_sim_standard_nav.launch  kinect_testing.launch  mapping_testing.launch  move_base.launch  move_base_teb.launch  ncfm_world.launch  pcl_filter.launch  robotlab_map_server.launch  tracking_.launch  tracking_testing.launch
demo/maps/: INB3123.pgm  INB3123.yaml  robotlab.yaml
demo/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
demo/rviz/: cititruck_mapping.rviz  iliad_cititruck_nav.rviz  iliad_cititruck_nav_human_aware.rviz  iliad_cititruck_nav_human_aware_spencer.rviz  mapping_testing.rviz  tracking_testing.rviz  visualization_robot.rviz
demo/scripts/: movegoals.py  velParser.py
demo/worlds/: ncfm_model.world
envelope_manager/: CMakeLists.txt  package.xml
envelope_manager/cfg/: envelopeManager.cfg
envelope_manager/launch/: iliad_single_truck.launch  record_test.launch
envelope_manager/scripts/: EnvelopeManager.py
envelope_manager/src/: em_node.cpp  envelope_manager_node.cpp
halp/: CMakeLists.txt  package.xml
halp/scripts/: check_rosbag.py  check_rosbag_good.py  goalRetriever.py  halp.py  localGoalRetriever.py  trajectoryPlanner.py  trajectoryScrambler.py
hanp_filters/: CMakeLists.txt  LICENSE  README.md  hanp_filters_plugins.xml  package.xml
hanp_filters/launch/: laser_filter.launch  laser_filter.yaml  laser_filter_rec.launch
hanp_filters/src/: laser_filter.cpp
hri_simulation/: CMakeLists.txt  custom_rosconsole.conf  package.xml
hri_simulation/config/: leg_detector.yaml  nodelet_resize.yaml
hri_simulation/launch/: check_detector.launch  cititruck_ncfm.launch  filter.launch  hrsi.launch  iliad_sim_hri.launch  iliad_sim_hri_spencer.launch  iliad_sim_hri_strands.launch  ncfm_map_server.launch  ncfm_world.launch  simulate_spencer_people_tracker.launch  spencer_ground_truth.launch  spencer_people_tracker.launch  strands_people_tracker.launch  testme.launch  untitled.xml
hri_simulation/maps/: extra_room.yaml
hri_simulation/rviz/: check_detector.rviz  iliad_cititruck_dwa_nav_hri.rviz  spencer.rviz
hri_simulation/scripts/: virtual_ptu.py
hri_simulation/urdf/: iliad_velodyne_cititruck.xacro
iliad_base_simulation/: CMakeLists.txt  package.xml
iliad_base_simulation/launch/: iliad_sim.launch  iliad_sim_ncfm_humans.launch  iliad_sim_ncfm_long_walk.launch  iliad_sim_ncfm_no_human.launch  iliad_sim_ncfm_short_walk.launch  scenario_setup.launch
iliad_base_simulation/maps/: extra_room.yaml
iliad_base_simulation/params/: safety_laser_filter.yaml  safety_laser_filter_real.yaml  uol_nav_laser_filter.yaml
iliad_base_simulation/urdf/: iliad_uol_cititruck.xacro
iliad_base_simulation/worlds/: ncfm_model_1_actor_long.world  ncfm_model_1_actor_scenario-1.world  ncfm_model_1_actor_scenario-2.world  ncfm_model_1_actor_scenario-3.world  ncfm_model_1_actor_scenario-4.world  ncfm_model_1_actor_scenario-5.world  ncfm_model_1_actor_scenario-6.world  ncfm_model_1_actor_scenario-7.world  ncfm_model_1_actor_scenario-8.world  ncfm_model_1_actor_short_small_room.world  ncfm_model_1_new_actor_short.world  orkla-sim-old.world  orkla-sim-performance.world  orkla-sim.world  orkla-sim_old.world
iliad_citi_controller/: CMakeLists.txt  package.xml
iliad_citi_controller/launch/: necromancer.launch  parserVels.launch  telefork.launch
iliad_citi_controller/scripts/: velParser.py
iliad_dynamic_constraints/: CMakeLists.txt  package.xml
iliad_dynamic_constraints/cfg/: constraintSettings.cfg
iliad_dynamic_constraints/launch/: example_params.yaml  ms3.launch  ms3_old.launch  provide_target.launch  qsr_constraints.launch  slider_gui.launch  test.launch  test_constraints_map.launch  test_constraints_node.launch  test_qsr_visualize.launch
iliad_dynamic_constraints/rqtGui/: slider_5.yaml
iliad_dynamic_constraints/scripts/: QSR2constraints.py  QSR2constraints_node.py  QTCplot.py  mock_map.py  taskManipulation_node.py
iliad_hrsi/: CMakeLists.txt  package.xml
iliad_hrsi/launch/: record_qtc_topics.launch  test.launch  test_qtc_generator.launch
iliad_hrsi/scripts/: QTC_generator.py  QTCplot.py  TrajPlot.py  spencer_to_bayes.py
iliad_human_aware_navigation/: CMakeLists.txt  package.xml
iliad_human_aware_navigation/cfg/: VelocityCostmaps.cfg  test_constraints.rviz
iliad_human_aware_navigation/deprecated/: setup.py
iliad_init_pose_manager/: CMakeLists.txt  package.xml
iliad_local_planner/: CMakeLists.txt  package.xml
iliad_oru_local_planer/: package.xml
iliad_smp_planner/: CHANGELOG.rst  CMakeLists.txt  bgp_plugin.xml  package.xml  readme.md
iliad_velocity_costmaps/: CMakeLists.txt  package.xml  setup.py
moving_actor_gazebo/: CMakeLists.txt  package.xml
nav_simulation/: CMakeLists.txt  package.xml
(+482 files in other folders)
