<?xml version="1.0"?>
<package>
  <name>base_simulation</name>
  <version>0.0.1</version>
  <description>Gazebo world configurations and simulated forklifts used in other packages.</description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>