<?xml version="1.0"?>
<package>
  <name>demo</name>
  <version>0.0.1</version>
  <description>L-CAS demo package</description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
