<?xml version="1.0"?>
<package>
  <name>hri_simulation</name>
  <version>0.0.1</version>
  <description>Simulations to test strands HRI navigation using spencer trackers on iliad</description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>jsk-rviz-plugins</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>ros-kinetic-global-planner</run_depend>
  <run_depend>ros-kinetic-teb-local-planner</run_depend>
  <run_depend>ros-kinetic-spencer-people-tracking-full</run_depend>
  <run_depend>ros-kinetic-iliad-distribution</run_depend>

  <export>
  </export>
</package>
