<?xml version="1.0"?>
<package>
  <name>hri_simulation</name>
  <version>0.0.1</version>
  <description>Simulations to test strands HRI navigation using spencer trackers on iliad</description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>spencer_people_tracking_full</run_depend>
  <run_depend>iliad_distribution</run_depend>

  <export>
  </export>
</package>
