<?xml version="1.0"?>
<package>
  <name>iliad_base_simulation</name>
  <version>0.0.1</version>
  <description>Gazebo world configurations and simulated forklifts used in other packages.</description>

  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
  <license>BSD</license>

  <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>contact_monitor</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
