<?xml version="1.0"?>
<package>
  <name>iliad_citi_controller</name>
  <version>0.0.1</version>
  <description>cititruck driver </description>

  <maintainer email="manolofc@gmail.com">Manuel Fdez</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kvaser-libcan</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
