<?xml version="1.0"?>
<package format="2">
  <name>iliad_dynamic_constraints</name>
  <version>0.0.1</version>
  <description>
  Contains several works regarding local alterations of speeds or constraints. 
  dynamic_constraints_node.py captures trajectories from the execution node to the controller node and changes spatial and speed constraints. 
  QSR2constraints_node.py analyzes and plots in rviz current qtc state and publishes speed restrictions based on those.
  QTCplot.py forks QSR2constraints_node state calculus and plotting.
  </description>

  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
  <license>BSD</license>

  <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>


  <buildtool_depend>catkin</buildtool_depend>
  <!--  build_depend dynamic_reconfigure  build_depend -->

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>driver_base</build_depend>
  <!--  build_export_depend  dynamic_reconfigure  /build_export_depend -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>driver_base</exec_depend>
  <exec_depend>orunav_msgs</exec_depend>
  <exec_depend>rqt_ez_publisher</exec_depend>

  <!-- exec_depend   dynamic_reconfigure   /exec_depend -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
