<?xml version="1.0"?>
<package format="2">
  <name>iliad_hrsi</name>
  <version>0.0.1</version>
  <description>
  Contains several works regarding local alterations of speeds or constraints. 
  dynamic_constraints_node.py captures trajectories from the execution node to the controller node and changes spatial and speed constraints. 
  QSR2constraints_node.py analyzes and plots in rviz current qtc state and publishes speed restrictions based on those.
  QTCplot.py forks QSR2constraints_node state calculus and plotting.
  </description>

  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
  <license>BSD</license>

  <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>


  <buildtool_depend>catkin</buildtool_depend>
  <!--  build_depend dynamic_reconfigure  build_depend -->

  <build_depend>rospy</build_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_depend>python-numpy</build_depend>
  <build_depend>uuid</build_depend>
  <build_depend>qsr_lib</build_depend>
  
  <!-- <build_depend>math</build_depend>
  <build_depend>threading</build_depend> -->
  

  <exec_depend>rospy</exec_depend>
  <exec_depend>bayes_people_tracker</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>orunav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>spencer_tracking_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>uuid</exec_depend>
  <exec_depend>qsr_lib</exec_depend>

  <!-- <exec_depend>math</exec_depend>
  <exec_depend>threading</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
