<?xml version="1.0"?>
<package format="2">
  <name>iliad_human_aware_navigation</name>
  <version>0.2.5</version>
  <description>The iliad_human_aware_navigation package

  </description>

  <maintainer email="manolofc@gmail.com">Manuel Fdez.</maintainer>

  <license>MIT</license>

  <author email="manolofc@gmail.com">Manuel Fdez.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>json</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>scipy</build_depend>
  <build_depend>threading</build_depend>
  <build_depend>matplotlib</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>bayes_people_tracker</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>orunav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>matplotlib</exec_depend>

  <export/>
</package>
