<?xml version="1.0"?>
<package format="2">
  <name>iliad_local_planner</name>
  <version>0.0.1</version>
  <description>The iliad_local_planner package</description>
  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel Fernandez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--  build_depend dynamic_reconfigure  build_depend -->

  <build_depend>roscpp</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>orunav_generic</build_depend>
  <build_depend>orunav_conversions</build_depend>
  <build_depend>orunav_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!--  build_export_depend  dynamic_reconfigure  /build_export_depend -->

  <build_export_depend>roscpp</build_export_depend>
  
  <!-- exec_depend   dynamic_reconfigure   /exec_depend -->
  <exec_depend>orunav_msgs</exec_depend>
  <exec_depend>orunav_generic</exec_depend>
  <exec_depend>orunav_conversions</exec_depend>
  <exec_depend>orunav_geometry</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
