<package>
    <name>iliad_smp_planner</name>
    <version>1.14.3</version>
    <description>

        A simple planner based on iliad_smp-planner that embeds iliad_smp into a ROS global Planner.

    </description>
    <maintainer email="manolofc@gmail.com">Manuel F. Carmona</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>tf</build_depend>
    <!--<build_depend>angles</build_depend>-->

    <run_depend>roscpp</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>base_local_planner</run_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>

</package>


